--- a/frontend/src/sassStyles/layout/InfoModal.scss
+++ b/frontend/src/sassStyles/layout/InfoModal.scss
@@ -13,7 +13,7 @@
 
 .estateInfoPopup {
     position: fixed;
-    background-color: rgba(105, 0, 0, 0.5);
+    background-color: rgba(105, 0, 0, 0.7);
     width: 100%;
     height: 100vh;
     left: 0;
@@ -21,19 +21,24 @@
     z-index: 999;
     @include center-content;
 
+    &_moreinfo {
+      color: rgb(185, 0, 0);
+    }
+
     &_estateInfoBox {
         position: relative;
         @include center-content-column-top;
-        background-color: rgb(255, 255, 255);
+        background-color: rgb(31, 0, 0);
         width: 60%;
         max-height: 100%;
         overflow-y: auto;
+        border: 2px solid darkred;
         top: 50px;
         box-shadow: 0px 0px 40px rgb(19, 0, 0);
         animation-name: popup;
         animation-duration: .5s;
         color:rgb(97, 0, 0);
-        padding: 50px;
+        padding: 40px;
         @include respond10(thirteenhundred){
              width: 80%;
         }
@@ -46,21 +51,20 @@
             width: 100%;
             margin: 0 0 20px 0;
             @include center-content;
+
             padding: 10px 0;
-            color: white;
-            background-color:  rgb(31, 31, 31);
-            border-bottom: 1px solid rgb(75, 0, 0);
-            border-top: 1px solid rgb(75, 0, 0);
+            color: rgb(165, 0, 0);
+            border-bottom: 1px solid rgb(128, 0, 0);
         }
 
         &_gridContainer {
             gap: 20px;
             @include  spacebetween-content ;
             flex-wrap: wrap;
-            margin-bottom: 20px;
+            margin: 20px 0;
 
             & .estateImage {
-                width: 22%;
+                width: 30%;
                 @include center-content;
                 box-shadow: 0px 1px 2px rgb(99, 90, 112);
                 @include respond12(thousand){
@@ -74,6 +78,7 @@
             }
         }
     }
+    
 }
 
 .hide {
