--- a/frontend/src/sassStyles/pages/content.scss
+++ b/frontend/src/sassStyles/pages/content.scss
@@ -15,7 +15,7 @@
             padding: 80px 0;
         }
 
-     &_featuring {
+    &_featuring {
             width: 100%;
             margin-bottom: 30px;
             @include center-content;
@@ -183,6 +183,9 @@
             color:rgb(207, 198, 219);
             margin-bottom: 30px;
             border-bottom: 3px solid  rgb(207, 198, 219);
+             @include respond7(headername){
+             font-size: 3rem;
+         }
         }
 
         & .elliesTeam {
@@ -279,13 +282,92 @@
             }
         }
     }
-
-    
 }
 
 .content_block6  {
     height: 700px;
     background-color:rgb(66, 0, 0);
+}
+
+.content_block7 {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: auto;
+    padding: 60px 0;
+    background-image: url('../../assets/images/frenchcountryside.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    @include respond2(gridcontainer){
+            height: auto;
+         }
+
+    .wrapper {
+    width: 1000px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    color: white;
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+     @include respond2(gridcontainer){
+            width: 90%;
+         }
+
+    &_header {
+        font-size: 2rem;
+    }
+
+    &_subHeader {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding-bottom: 20px;
+        width: 100%;
+        font-size: 1.2rem;
+        letter-spacing: 2px;
+        word-spacing: 5px;
+        border-bottom: 2px solid rgb(255, 255, 255);
+    }
+
+    &_text {
+        width: 100%;
+        padding: 20px 0;
+        display: flex;
+        align-items: start;
+        justify-content: space-between;
+        flex-direction: row;
+        line-height: 1.6;
+        @include respond5(contentBreak){
+            flex-direction: column;
+         }
+        
+        //  @include respond2(gridcontainer){
+        //     flex-direction: column;
+        //  }
+
+        &_columnLeft {
+            width: 50%;
+            margin-right: 35px;
+            display: flex;
+            align-items: start;
+            @include respond5(contentBreak){
+            width: 100%;
+            margin-right: 0px;
+         }
+        }
+
+        &_columnRight {
+            width: 50%;
+            margin-right: 10px;
+             @include respond5(contentBreak){
+            width: 100%;
+            margin-right: 0px;
+         }
+        }
+    }
+    }
 }
 
 
