--- a/frontend/src/sassStyles/pages/content.scss
+++ b/frontend/src/sassStyles/pages/content.scss
@@ -309,7 +309,7 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    color: white;
+    color: rgb(217, 211, 226);
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
      @include respond2(gridcontainer){
             width: 90%;
@@ -328,34 +328,38 @@
         font-size: 1.2rem;
         letter-spacing: 2px;
         word-spacing: 5px;
-        border-bottom: 2px solid rgb(255, 255, 255);
+        border-bottom: 2px solid rgb(217, 211, 226);
+        @include respond3(smallest){
+              font-size: 1rem;
+              letter-spacing: 1px;
+               word-spacing: 3px;
+        }
     }
 
     &_text {
         width: 100%;
         padding: 20px 0;
         display: flex;
-        align-items: start;
+        align-items: flex-start;
         justify-content: space-between;
         flex-direction: row;
         line-height: 1.6;
         @include respond5(contentBreak){
             flex-direction: column;
          }
-        
-        //  @include respond2(gridcontainer){
-        //     flex-direction: column;
-        //  }
 
         &_columnLeft {
             width: 50%;
             margin-right: 35px;
             display: flex;
-            align-items: start;
+            align-items: flex-start;
             @include respond5(contentBreak){
             width: 100%;
             margin-right: 0px;
          }
+         b {
+                text-decoration: underline;
+            }
         }
 
         &_columnRight {
@@ -365,6 +369,9 @@
             width: 100%;
             margin-right: 0px;
          }
+         b {
+                text-decoration: underline;
+            }
         }
     }
     }
