--- a/frontend/src/sassStyles/layout/searchEstates.scss
+++ b/frontend/src/sassStyles/layout/searchEstates.scss
@@ -68,7 +68,13 @@
 
 .resetIcon {
     width: 18px;
+     padding-top: 5px;
     transition: .5s ease-in-out;
+}
+
+.searchIcon {
+    padding-top: 5px;
+    width: 20px;
 }
 
 .turn {
