--- a/frontend/src/sassStyles/layout/EnquiryForm.scss
+++ b/frontend/src/sassStyles/layout/EnquiryForm.scss
@@ -7,9 +7,9 @@
     align-items: center;
     justify-content: flex-start;
     flex-direction: column;
-    border-width: 0 10px 10px 10px;
-    border-color:  $dominantbackground;
-    border-style: solid;
+    // border-width: 0 10px 10px 10px;
+    border-color:  rgb(72, 0, 0);
+    // border-style: solid;
     top:0;
     width: 100%;
     height: 205px;
@@ -22,6 +22,7 @@
 
     &.show {
     top: 205px;
+    padding: 0 10px;
       @keyframes show-form {
            0% {
              opacity: 0;
@@ -30,12 +31,11 @@
              opacity: 1;
            }
       }
-       @include respond5(contentBreak){
+      @include respond5(contentBreak){
             top: 10px;
             height: 540px;
             background-image: linear-gradient(to top, rgb(116, 0, 0), rgb(189, 0, 0));
         }
-
     }
 }
 
@@ -46,10 +46,10 @@
        align-items: center;
        justify-content: center;
        flex-direction: row;
-       padding: 0 10px;
+       padding: 5px 0px 0px 0px;
        font-family: Arial, Helvetica, sans-serif;
        font-size: .9rem;
-       border-bottom: 1px solid rgb(216, 210, 224);
+       
         @include respond5(contentBreak){
              border-bottom: 0;
              padding: 0;
@@ -69,6 +69,7 @@
        justify-content: center;
        width: 90%;
        height: 30px;
+       
         @include respond5(contentBreak){
             display:none;
         }
@@ -77,7 +78,7 @@
          display:flex;
        align-items: center;
        justify-content: flex-end;
-         color: rgb(229, 225, 235);
+         color: rgb(198, 184, 219);
          width: 50%;
        }
 
@@ -86,7 +87,8 @@
        align-items: center;
        justify-content: flex-start;
        font-weight: bold;
-         color: rgb(229, 225, 235);
+       letter-spacing: 2px;
+         color: rgb(223, 0, 0);
          width: 50%;
          @include respond5(contentBreak){
             display:none;
@@ -104,8 +106,19 @@
 
        .closeBtn {
        cursor: pointer;
-       width: 20px;
-       height: 20px;
+       display: flex;
+       align-items: center;
+       justify-content: center;
+       width: 28px;
+       height: 28px;
+      //  padding-top: 2px;
+      //  padding-left: 1px;
+      //  font-size: 1.2rem;
+      //  font-weight: bold;
+      //  color: rgb(97, 0, 0);
+      // //  border: 2px solid red;
+      //  background-color: rgb(187, 171, 211);
+      //  border-radius: 50%;
        @include respond5(contentBreak){
             margin-top: 30px;
         }
@@ -126,18 +139,19 @@
       & span {
         margin-top: 10px;
       }
-      & .makeEnquiry {
+      .makeEnquiry {
         font-size: 1rem;
       }
-      & .castleName {
+      .estateName {
         font-weight: bold;
-        letter-spacing: 1px;
+        letter-spacing: 2px;
       }
 }
 }
 
 .form {
   width: 100%;
+  border-top: 1px solid rgb(216, 210, 224);
 }
 
 .enquiryForm_inputfields {
@@ -146,14 +160,29 @@
        align-items: flex-start;
        justify-content: center;
        flex-direction: row;
-       padding: 0 10px;
+      //  padding: 0 10px;
+       
        @include respond5(contentBreak){
              flex-direction: column;
         }
 
+        
+       &_name2 {
+         width: 50%;
+        display:flex;
+        margin-right: 10px;
+       align-items: center;
+       justify-content: center;
+       flex-direction: column;
+      @include respond5(contentBreak){
+              width: 100%;
+        }
+      }
+
        &_name {
          width: 50%;
         display:flex;
+         margin-left: 10px;
        align-items: center;
        justify-content: center;
        flex-direction: column;
@@ -161,7 +190,7 @@
               width: 100%;
         }
        .sendRequestBtn {
-         width: 90%;
+         width: 100%;
     
        & button {
            width: 100%;
@@ -195,7 +224,7 @@
       //  }
 
        & input {
-         width: 90%;
+         width: 100%;
          margin-bottom: 20px;
          margin-top: 12px;
          height: 30px;
