--- a/frontend/src/sassStyles/pages/AllProperties.scss
+++ b/frontend/src/sassStyles/pages/AllProperties.scss
@@ -129,29 +129,31 @@
 }
 
 .content_subscription {
-    padding: 50px 20px;
-    height: auto;
-    width: 100%;
+    padding: 50px 0;
+    margin: 0 auto;
+    width: 91%;
     background-color: $dominantbackground;
-    // border-top: 1px solid rgb(110, 101, 124);
     @include center-content-row;
     gap: 20px;
     display: none;
+     @include respond2(gridcontainer){
+        flex-direction: column;
+    }
     @include respond1(removeSidebar){
         display: flex;
-           padding: 0 50px 80px 50px;
+           padding: 0 0px 80px 0px;
     }
 
     .finance {
         width: 50%;
-        height: 275px;
+        height: 286px;
         background-image: linear-gradient(to top, rgb(63, 0, 0),  rgb(85, 0, 0));
          border-top: 1px solid rgb(124, 0, 0);
     border-bottom: 2px solid rgb(24, 0, 0);
         color:rgb(165, 156, 179);
         @include center-content-row;
          @include respond2(gridcontainer){
-        display: none;
+        width: 100%;
     }
     }
 
@@ -162,3 +164,4 @@
     }
     }
 }
+
