--- a/frontend/src/sassStyles/pages/Services.scss
+++ b/frontend/src/sassStyles/pages/Services.scss
@@ -2,7 +2,7 @@
 @import '../abstracts/variables';
 @import '../abstracts/mixins';
 
-.financeService {
+.services {
     width: 100%;
     height: 100vh;
     background-color: rgb(65, 0, 0);
