--- a/frontend/src/sassStyles/pages/buy.scss
+++ b/frontend/src/sassStyles/pages/buy.scss
@@ -22,8 +22,6 @@
     margin-bottom: 150px;
     box-shadow: 0px 4px 8px rgb(29, 0, 0);
     border-top: 1px solid rgb(117, 47, 47);
-    // border-bottom: 2px solid rgb(32, 0, 0);
-    // background-image: linear-gradient(to top, rgb(61, 0, 0),  rgb(85, 0, 0));
     line-height: 1.4;
     color: rgb(207, 198, 219);
     @include respond(hamburgermenu){
@@ -58,6 +56,7 @@
         line-height: 0px;
         margin-top: 72.12px;
         height: 60.44px;
+        color: rgb(153, 102, 102);
     }
     p {
         padding-bottom: 50px;
