--- a/frontend/src/sassStyles/pages/content.scss
+++ b/frontend/src/sassStyles/pages/content.scss
@@ -22,7 +22,7 @@
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
             font-size: 1.2rem;
             letter-spacing: 2px;
-            color: rgb(179, 138, 138);  
+            color: rgb(216, 213, 213);  
       }
 
     &_wrapper {
@@ -212,6 +212,78 @@
 .content_block4  {
     height: 700px;
     background-color: rgb(231, 231, 231);
+    @include center-content-column;
+
+    .rooftop {
+        width: 940px;
+        height: auto;
+        margin-bottom: 20px;
+         @include respond12(thousand){
+             width: 730px;
+        }
+        @include respond5(contentBreak){
+             width: 500px;
+        }
+        @include respond3(smallest){
+             width: 360px;
+        }
+    }
+    .buyingrealestatewrapper {
+        width: 100%;
+        @include center-content-column;
+        margin-bottom: 20px;
+    }
+    .invest{
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
+    }
+    .buyingrealestate {
+        font-size: 1.4rem;
+        text-transform: uppercase;
+        font-weight: bold;
+        color: rgb(109, 0, 0);
+        @include respond5(contentBreak){
+            font-size: 1rem;
+        }
+    }
+    .buyingrealestate2 {
+        font-size: 3.4rem;
+        text-transform: uppercase;
+        font-weight: bold;
+        word-spacing: 5px;
+        letter-spacing: 10px;
+        -webkit-text-stroke-width: 1px;
+        -webkit-text-stroke-color: rgb(61, 0, 0);
+        color: rgb(231, 231, 231);
+        @include respond12(thousand){
+            font-size: 2.4rem;
+        }
+        @include respond5(contentBreak){
+            font-size: 1.8rem;
+            word-spacing: 3px;
+            letter-spacing: 5px;
+        }
+        @include respond3(smallest){
+            font-size: 1.4rem;
+            word-spacing: 2px;
+            letter-spacing: 4px;
+        }
+    }
+    .diagram {
+        width: 940px;
+        height: auto;
+        border-bottom: 4px solid darkred;
+        padding-bottom: 10px;
+        @include respond12(thousand){
+             width: 730px;
+        }
+        @include respond5(contentBreak){
+             width: 500px;
+        }
+        @include respond3(smallest){
+             width: 360px;
+        }
+    }
 }
 
 .block5 {
