--- a/frontend/src/cssStyles/EnquiryForm.css
+++ b/frontend/src/cssStyles/EnquiryForm.css
@@ -21,7 +21,7 @@
   border-style: solid;
   top: 0;
   width: 100%;
-  height: 205px;
+  height: 100%;
   box-shadow: 0px 2px 3px rgb(39, 0, 0);
   z-index: 1;
   animation: show-form 0.8s ease-in-out;
@@ -29,6 +29,7 @@
   color: white;
   background-image: linear-gradient(to top, rgb(65, 0, 0), rgb(153, 0, 0));
 }
+
 .enquiryForm.show {
   top: 205px;
 }
@@ -42,8 +43,8 @@
 }
 @media only screen and (max-width: 750px) {
   .enquiryForm.show {
-    top: 10px;
-    height: 540px;
+    top: 0px;
+    height: 100%;
     background-image: linear-gradient(to top, rgb(116, 0, 0), rgb(189, 0, 0));
   }
 }
@@ -190,10 +191,10 @@
   background-color: rgb(150, 0, 0);
   color: rgb(221, 216, 230);
 }
+
 @media only screen and (max-width: 750px) {
   .enquiryForm_inputfields_name .sendRequestBtn button {
     height: 43px;
-    margin-top: 20px;
     box-shadow: 0px 2px 2px rgb(90, 0, 0);
   }
 }
