--- a/frontend/src/sassStyles/layout/Map.scss
+++ b/frontend/src/sassStyles/layout/Map.scss
@@ -23,6 +23,7 @@
     @include center-content;
     @include respond5(contentBreak){
             height: 120px;
+            margin: 10px 0;
         }
 
     .regionName {
@@ -58,6 +59,7 @@
     @include respond5(contentBreak){
             width: 100%;
             margin-bottom: 20px;
+
         }
 
         &:hover {
