--- a/frontend/src/sassStyles/layout/singleproperty.scss
+++ b/frontend/src/sassStyles/layout/singleproperty.scss
@@ -10,37 +10,31 @@
         color: rgb(186, 166, 194);
         box-shadow: 0px 1px 2px rgb(53, 0, 0);
         background-image: linear-gradient(to top, rgb(61, 0, 0),  rgb(85, 0, 0));
-        height: 205px;
+        height: 210px;
         border-top: 1px solid rgb(143, 0, 0);
         border-bottom: 2px solid rgb(37, 0, 0);
-        transition: all .5s ease-in-out;
+        transition: height .8s ease-in-out;
         &.enlarge {
         height: 410px;
        }
 
         @include respond5(contentBreak){
             width: 300px;
-            height: 550px;
+            height: 100%;
+             background-image: linear-gradient(to top, rgb(49, 0, 0),  rgb(97, 0, 0));
              @include center-content-column-top;
              &.enlarge {
-              height: 550px;
+              height: 100%;
             }
         }
 
         &_castleImageBox {
             cursor: pointer;
         }
-
         &_castleImage {
-        padding: 10px;
-        display: block;
+        height: auto;
         width: 300px;
-        }
-
-        &_castleImage {
-        padding: 10px;
-        display: block;
-        width: 300px;
+        padding:10px;
         }
 
         &_info {
