--- a/frontend/src/sassStyles/layout/InfoModal.scss
+++ b/frontend/src/sassStyles/layout/InfoModal.scss
@@ -13,7 +13,7 @@
 
 .estateInfoPopup {
     position: fixed;
-    background-color: rgba(105, 0, 0, 0.7);
+    background-color: rgba(66, 0, 0, 0.7);
     width: 100%;
     height: 100vh;
     left: 0;
@@ -22,22 +22,27 @@
     @include center-content;
 
     &_moreinfo {
-      color: rgb(185, 0, 0);
+      margin-top: 20px;
     }
 
     &_estateInfoBox {
-        position: relative;
+        position: absolute;
         @include center-content-column-top;
-        background-color: rgb(31, 0, 0);
-        width: 60%;
+        background-color: rgb(77, 0, 0);
+        width: 40%;
         max-height: 100%;
         overflow-y: auto;
-        border: 2px solid darkred;
-        top: 50px;
-        box-shadow: 0px 0px 40px rgb(19, 0, 0);
+        border-radius: 10px;
+        border-top: 1px solid rgb(129, 0, 0);
+        border-bottom: 1px solid rgb(20, 0, 0);
+        // border: 2px solid darkred;
+        top: 50%;
+        right:50%;
+        transform:translate(50%, -50%);
+        box-shadow: 0px 0px 40px rgb(37, 0, 0);
         animation-name: popup;
         animation-duration: .5s;
-        color:rgb(97, 0, 0);
+        color:rgb(205, 183, 209);
         padding: 40px;
         @include respond10(thirteenhundred){
              width: 80%;
@@ -53,8 +58,8 @@
             @include center-content;
 
             padding: 10px 0;
-            color: rgb(165, 0, 0);
-            border-bottom: 1px solid rgb(128, 0, 0);
+            // color: rgb(216, 198, 219);
+            border-bottom: 1px solid rgb(145, 0, 0);
         }
 
         &_gridContainer {
@@ -63,19 +68,24 @@
             flex-wrap: wrap;
             margin: 20px 0;
 
+
             & .estateImage {
                 width: 30%;
                 @include center-content;
                 box-shadow: 0px 1px 2px rgb(99, 90, 112);
                 @include respond12(thousand){
                 width: 45%;
+               
                 }
                 
                 img {
                     width: 100%;
                     height: auto;
+                    
                 }
+                
             }
+            
         }
     }
     
